etl-api/tests/snapshots/destinations__all_destinations_can_be_read-2.snap
---
source: etl-api/tests/destinations.rs
expression: destination.config
---
BigQuery {
    project_id: "project-id-updated",
    dataset_id: "dataset-id-updated",
    service_account_key: SerializableSecretString(
        SecretBox<str>([REDACTED]),
    ),
    max_staleness_mins: Some(
        10,
    ),
    connection_pool_size: Some(
        1,
    ),
}
