etl-api/tests/snapshots/destinations__all_destinations_can_be_read.snap
---
source: etl-api/tests/destinations.rs
expression: destination.config
---
BigQuery {
    project_id: "project-id",
    dataset_id: "dataset-id",
    service_account_key: SerializableSecretString(
        SecretBox<str>([REDACTED]),
    ),
    max_staleness_mins: None,
    connection_pool_size: Some(
        1,
    ),
}
